// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: bar seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo → *",
          "subtype": "event",
        },
        "group": "cmd",
        "id": "6",
        "type": "emit",
      },
      "group": "step",
      "id": "7",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "fn": [Function],
                },
                "group": "cmd",
                "id": "r",
                "type": "compute",
              },
              "group": "step",
              "id": "s",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "group": "cmd",
                "id": "t",
                "type": "filter",
              },
              "group": "step",
              "id": "u",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Object {
                    "data": Object {
                      "filter": [Function],
                    },
                    "group": "cmd",
                    "id": "d",
                    "type": "filter",
                  },
                  "group": "step",
                  "id": "e",
                  "type": "single",
                },
                Object {
                  "data": Object {
                    "data": Object {
                      "store": Object {
                        "current": "foo | 1 | 11",
                        "id": "1",
                      },
                    },
                    "group": "cmd",
                    "id": "f",
                    "type": "update",
                  },
                  "group": "step",
                  "id": "g",
                  "type": "single",
                },
                Object {
                  "data": Array [
                    Object {
                      "data": Array [
                        Object {
                          "data": Object {
                            "data": Object {
                              "fn": [Function],
                            },
                            "group": "cmd",
                            "id": "1b",
                            "type": "compute",
                          },
                          "group": "step",
                          "id": "1c",
                          "type": "single",
                        },
                        Object {
                          "data": Object {
                            "data": Object {
                              "filter": [Function],
                            },
                            "group": "cmd",
                            "id": "1d",
                            "type": "filter",
                          },
                          "group": "step",
                          "id": "1e",
                          "type": "single",
                        },
                        Object {
                          "data": Array [
                            Object {
                              "data": Object {
                                "data": Object {
                                  "filter": [Function],
                                },
                                "group": "cmd",
                                "id": "x",
                                "type": "filter",
                              },
                              "group": "step",
                              "id": "y",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "store": Object {
                                    "current": 12,
                                    "id": "2",
                                  },
                                },
                                "group": "cmd",
                                "id": "z",
                                "type": "update",
                              },
                              "group": "step",
                              "id": "10",
                              "type": "single",
                            },
                            Object {
                              "data": Array [],
                              "group": "step",
                              "id": "w",
                              "type": "multi",
                            },
                          ],
                          "group": "step",
                          "id": "11",
                          "type": "seq",
                        },
                      ],
                      "group": "step",
                      "id": "1f",
                      "type": "seq",
                    },
                  ],
                  "group": "step",
                  "id": "c",
                  "type": "multi",
                },
              ],
              "group": "step",
              "id": "h",
              "type": "seq",
            },
          ],
          "group": "step",
          "id": "v",
          "type": "seq",
        },
        Object {
          "data": Object {
            "data": Object {
              "runner": [Function],
            },
            "group": "cmd",
            "id": "1g",
            "type": "run",
          },
          "group": "step",
          "id": "1h",
          "type": "single",
        },
      ],
      "group": "step",
      "id": "5",
      "type": "multi",
    },
  ],
  "group": "step",
  "id": "8",
  "type": "seq",
}
`;

exports[`graphite: bar seq 2`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo → *",
          "subtype": "event",
        },
        "group": "cmd",
        "id": "6",
        "type": "emit",
      },
      "group": "step",
      "id": "7",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "fn": [Function],
                },
                "group": "cmd",
                "id": "r",
                "type": "compute",
              },
              "group": "step",
              "id": "s",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "group": "cmd",
                "id": "t",
                "type": "filter",
              },
              "group": "step",
              "id": "u",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Object {
                    "data": Object {
                      "filter": [Function],
                    },
                    "group": "cmd",
                    "id": "d",
                    "type": "filter",
                  },
                  "group": "step",
                  "id": "e",
                  "type": "single",
                },
                Object {
                  "data": Object {
                    "data": Object {
                      "store": Object {
                        "current": "foo | 1 | 11",
                        "id": "1",
                      },
                    },
                    "group": "cmd",
                    "id": "f",
                    "type": "update",
                  },
                  "group": "step",
                  "id": "g",
                  "type": "single",
                },
                Object {
                  "data": Array [
                    Object {
                      "data": Array [
                        Object {
                          "data": Object {
                            "data": Object {
                              "fn": [Function],
                            },
                            "group": "cmd",
                            "id": "1b",
                            "type": "compute",
                          },
                          "group": "step",
                          "id": "1c",
                          "type": "single",
                        },
                        Object {
                          "data": Object {
                            "data": Object {
                              "filter": [Function],
                            },
                            "group": "cmd",
                            "id": "1d",
                            "type": "filter",
                          },
                          "group": "step",
                          "id": "1e",
                          "type": "single",
                        },
                        Object {
                          "data": Array [
                            Object {
                              "data": Object {
                                "data": Object {
                                  "filter": [Function],
                                },
                                "group": "cmd",
                                "id": "x",
                                "type": "filter",
                              },
                              "group": "step",
                              "id": "y",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "store": Object {
                                    "current": 12,
                                    "id": "2",
                                  },
                                },
                                "group": "cmd",
                                "id": "z",
                                "type": "update",
                              },
                              "group": "step",
                              "id": "10",
                              "type": "single",
                            },
                            Object {
                              "data": Array [],
                              "group": "step",
                              "id": "w",
                              "type": "multi",
                            },
                          ],
                          "group": "step",
                          "id": "11",
                          "type": "seq",
                        },
                      ],
                      "group": "step",
                      "id": "1f",
                      "type": "seq",
                    },
                  ],
                  "group": "step",
                  "id": "c",
                  "type": "multi",
                },
              ],
              "group": "step",
              "id": "h",
              "type": "seq",
            },
          ],
          "group": "step",
          "id": "v",
          "type": "seq",
        },
      ],
      "group": "step",
      "id": "5",
      "type": "multi",
    },
  ],
  "group": "step",
  "id": "8",
  "type": "seq",
}
`;

exports[`graphite: foo seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo",
          "subtype": "event",
        },
        "group": "cmd",
        "id": "2",
        "type": "emit",
      },
      "group": "step",
      "id": "3",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "fn": [Function],
                },
                "group": "cmd",
                "id": "9",
                "type": "compute",
              },
              "group": "step",
              "id": "a",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Object {
                    "data": Object {
                      "fullName": "foo → *",
                      "subtype": "event",
                    },
                    "group": "cmd",
                    "id": "6",
                    "type": "emit",
                  },
                  "group": "step",
                  "id": "7",
                  "type": "single",
                },
                Object {
                  "data": Array [
                    Object {
                      "data": Array [
                        Object {
                          "data": Object {
                            "data": Object {
                              "fn": [Function],
                            },
                            "group": "cmd",
                            "id": "r",
                            "type": "compute",
                          },
                          "group": "step",
                          "id": "s",
                          "type": "single",
                        },
                        Object {
                          "data": Object {
                            "data": Object {
                              "filter": [Function],
                            },
                            "group": "cmd",
                            "id": "t",
                            "type": "filter",
                          },
                          "group": "step",
                          "id": "u",
                          "type": "single",
                        },
                        Object {
                          "data": Array [
                            Object {
                              "data": Object {
                                "data": Object {
                                  "filter": [Function],
                                },
                                "group": "cmd",
                                "id": "d",
                                "type": "filter",
                              },
                              "group": "step",
                              "id": "e",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "store": Object {
                                    "current": "foo | 1 | 11",
                                    "id": "1",
                                  },
                                },
                                "group": "cmd",
                                "id": "f",
                                "type": "update",
                              },
                              "group": "step",
                              "id": "g",
                              "type": "single",
                            },
                            Object {
                              "data": Array [
                                Object {
                                  "data": Array [
                                    Object {
                                      "data": Object {
                                        "data": Object {
                                          "fn": [Function],
                                        },
                                        "group": "cmd",
                                        "id": "1b",
                                        "type": "compute",
                                      },
                                      "group": "step",
                                      "id": "1c",
                                      "type": "single",
                                    },
                                    Object {
                                      "data": Object {
                                        "data": Object {
                                          "filter": [Function],
                                        },
                                        "group": "cmd",
                                        "id": "1d",
                                        "type": "filter",
                                      },
                                      "group": "step",
                                      "id": "1e",
                                      "type": "single",
                                    },
                                    Object {
                                      "data": Array [
                                        Object {
                                          "data": Object {
                                            "data": Object {
                                              "filter": [Function],
                                            },
                                            "group": "cmd",
                                            "id": "x",
                                            "type": "filter",
                                          },
                                          "group": "step",
                                          "id": "y",
                                          "type": "single",
                                        },
                                        Object {
                                          "data": Object {
                                            "data": Object {
                                              "store": Object {
                                                "current": 12,
                                                "id": "2",
                                              },
                                            },
                                            "group": "cmd",
                                            "id": "z",
                                            "type": "update",
                                          },
                                          "group": "step",
                                          "id": "10",
                                          "type": "single",
                                        },
                                        Object {
                                          "data": Array [],
                                          "group": "step",
                                          "id": "w",
                                          "type": "multi",
                                        },
                                      ],
                                      "group": "step",
                                      "id": "11",
                                      "type": "seq",
                                    },
                                  ],
                                  "group": "step",
                                  "id": "1f",
                                  "type": "seq",
                                },
                              ],
                              "group": "step",
                              "id": "c",
                              "type": "multi",
                            },
                          ],
                          "group": "step",
                          "id": "h",
                          "type": "seq",
                        },
                      ],
                      "group": "step",
                      "id": "v",
                      "type": "seq",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "runner": [Function],
                        },
                        "group": "cmd",
                        "id": "1g",
                        "type": "run",
                      },
                      "group": "step",
                      "id": "1h",
                      "type": "single",
                    },
                  ],
                  "group": "step",
                  "id": "5",
                  "type": "multi",
                },
              ],
              "group": "step",
              "id": "8",
              "type": "seq",
            },
          ],
          "group": "step",
          "id": "b",
          "type": "seq",
        },
      ],
      "group": "step",
      "id": "1",
      "type": "multi",
    },
  ],
  "group": "step",
  "id": "4",
  "type": "seq",
}
`;

exports[`graphite: show bar 1`] = `
"Seq [
  1. emit {{
     subtype: event,
     fullName: foo → *
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. filter {{}},
           2. update {{
              store: {
                id: 1,
                current: foo | 1 | 11
              }
           }},
           3. [
              *  Seq [
                 1. compute {{}},
                 2. filter {{}},
                 3. Seq [
                    1. filter {{}},
                    2. update {{
                       store: {
                         id: 2,
                         current: 12
                       }
                    }},
                    3. [(empty list)]
                 ]
              ]
           ]
        ]
     ],
     *  run {{}}
  ]
]"
`;

exports[`graphite: show bar 2`] = `
"Seq [
  1. emit {{
     subtype: event,
     fullName: foo → *
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. filter {{}},
           2. update {{
              store: {
                id: 1,
                current: foo | 1 | 11
              }
           }},
           3. [
              *  Seq [
                 1. compute {{}},
                 2. filter {{}},
                 3. Seq [
                    1. filter {{}},
                    2. update {{
                       store: {
                         id: 2,
                         current: 12
                       }
                    }},
                    3. [(empty list)]
                 ]
              ]
           ]
        ]
     ]
  ]
]"
`;

exports[`graphite: show foo 1`] = `
"Seq [
  1. emit {{
     subtype: event,
     fullName: foo
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. Seq [
           1. emit {{
              subtype: event,
              fullName: foo → *
           }},
           2. [
              *  Seq [
                 1. compute {{}},
                 2. filter {{}},
                 3. Seq [
                    1. filter {{}},
                    2. update {{
                       store: {
                         id: 1,
                         current: foo | 1 | 11 | 101
                       }
                    }},
                    3. [
                       *  Seq [
                          1. compute {{}},
                          2. filter {{}},
                          3. Seq [
                             1. filter {{}},
                             2. update {{
                                store: {
                                  id: 2,
                                  current: 18
                                }
                             }},
                             3. [(empty list)]
                          ]
                       ]
                    ]
                 ]
              ]
           ]
        ]
     ]
  ]
]"
`;

exports[`graphite: show store1 1`] = `
"Seq [
  1. filter {{}},
  2. update {{
     store: {
       id: 1,
       current: foo | 1 | 11 | 101
     }
  }},
  3. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. filter {{}},
           2. update {{
              store: {
                id: 2,
                current: 18
              }
           }},
           3. [(empty list)]
        ]
     ]
  ]
]"
`;

exports[`graphite: show store2 1`] = `
"Seq [
  1. filter {{}},
  2. update {{
     store: {
       id: 2,
       current: 18
     }
  }},
  3. [(empty list)]
]"
`;

exports[`graphite: store1 seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "filter": [Function],
        },
        "group": "cmd",
        "id": "d",
        "type": "filter",
      },
      "group": "step",
      "id": "e",
      "type": "single",
    },
    Object {
      "data": Object {
        "data": Object {
          "store": Object {
            "current": "foo | 1 | 11 | 101",
            "id": "1",
          },
        },
        "group": "cmd",
        "id": "f",
        "type": "update",
      },
      "group": "step",
      "id": "g",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "fn": [Function],
                },
                "group": "cmd",
                "id": "1b",
                "type": "compute",
              },
              "group": "step",
              "id": "1c",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "group": "cmd",
                "id": "1d",
                "type": "filter",
              },
              "group": "step",
              "id": "1e",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Object {
                    "data": Object {
                      "filter": [Function],
                    },
                    "group": "cmd",
                    "id": "x",
                    "type": "filter",
                  },
                  "group": "step",
                  "id": "y",
                  "type": "single",
                },
                Object {
                  "data": Object {
                    "data": Object {
                      "store": Object {
                        "current": 18,
                        "id": "2",
                      },
                    },
                    "group": "cmd",
                    "id": "z",
                    "type": "update",
                  },
                  "group": "step",
                  "id": "10",
                  "type": "single",
                },
                Object {
                  "data": Array [],
                  "group": "step",
                  "id": "w",
                  "type": "multi",
                },
              ],
              "group": "step",
              "id": "11",
              "type": "seq",
            },
          ],
          "group": "step",
          "id": "1f",
          "type": "seq",
        },
      ],
      "group": "step",
      "id": "c",
      "type": "multi",
    },
  ],
  "group": "step",
  "id": "h",
  "type": "seq",
}
`;

exports[`graphite: store2 seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "filter": [Function],
        },
        "group": "cmd",
        "id": "x",
        "type": "filter",
      },
      "group": "step",
      "id": "y",
      "type": "single",
    },
    Object {
      "data": Object {
        "data": Object {
          "store": Object {
            "current": 18,
            "id": "2",
          },
        },
        "group": "cmd",
        "id": "z",
        "type": "update",
      },
      "group": "step",
      "id": "10",
      "type": "single",
    },
    Object {
      "data": Array [],
      "group": "step",
      "id": "w",
      "type": "multi",
    },
  ],
  "group": "step",
  "id": "11",
  "type": "seq",
}
`;

exports[`showcase: event foo 1`] = `
"Seq [
  1. emit {{
     subtype: event,
     fullName: foo
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. filter {{}},
           2. update {{
              store: {
                id: 3,
                current: 3
              }
           }},
           3. [
              *  run {{}}
           ]
        ]
     ]
  ]
]"
`;

exports[`showcase: mapped 1`] = `
"Seq [
  1. filter {{}},
  2. update {{
     store: {
       id: 6,
       current: 3
     }
  }},
  3. [
     *  run {{}}
  ]
]"
`;

exports[`showcase: store a 1`] = `
"Seq [
  1. filter {{}},
  2. update {{
     store: {
       id: 3,
       current: 3
     }
  }},
  3. [
     *  run {{}}
  ]
]"
`;
